update halo in chap4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
       "isospin",
       "isospins",
       "izaguirre",
+      "linearize",
       "linearized",
+      "lorentzian",
       "mikheyev",
       "parallelable",
       "plemelj",
