update chap 4 about halo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
    "cSpell.words": [
       "chakraborty",
       "discretization",
+      "discretize",
       "discretized",
       "eigenstate",
       "eigenstates",
