update abstract; acknowledgement; etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,17 @@
 {
    "cSpell.words": [
+      "Bahcall",
+      "Corotatting",
+      "Kneller",
+      "Pontecorvo",
+      "bremsstrahlung",
       "chakraborty",
+      "chirality",
+      "corotates",
+      "corotating",
+      "detuning",
+      "detunings",
+      "diagonalized",
       "discretization",
       "discretize",
       "discretized",
@@ -10,17 +21,24 @@
       "garching",
       "hamiltonians",
       "hermitian",
+      "hypercharge",
       "inhomogeneous",
       "isospin",
       "isospins",
       "izaguirre",
+      "krastev",
       "linearize",
       "linearized",
       "lorentzian",
+      "mikheev",
       "mikheyev",
+      "nonlocal",
+      "nonlocally",
+      "nucleosynthesis",
       "parallelable",
       "plemelj",
       "quaternion",
+      "rabi",
       "raffelt",
       "rescale",
       "sarikas",
