review: chap4 sec 1-3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
       "nonlocally",
       "nucleosynthesis",
       "parallelable",
+      "parallelized",
       "plemelj",
       "quaternion",
       "rabi",
@@ -48,6 +49,7 @@
       "tamborra",
       "wavenumber",
       "wavenumbers",
+      "wavevector",
       "wolfenstein"
    ]
 }
